--- a/games/brendon.html
+++ b/games/brendon.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Very Special Night at Brendons's</title>
+        <link rel="icon" type="image/png" href="player-2.png" />
         <meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
         </style>
@@ -379,8 +380,8 @@
                     Use the ARROW KEYS, WASD or the controls above to move Brendon<br><br>
                 </div>
                 <div class="well center" style="max-width:360px;">
-                    Best Time: <span id="high-score-1">0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    Previous Time: <span id="recent-score-1">0</span>
+                    Best Time: <span id="high-score-1">0</span> seconds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    Previous Time: <span id="recent-score-1">0</span> seconds
                 </div>
                 <button class="btn btn-success" style="margin-right: 32px;" onclick="reloadPage()">Reload Game</button>
                 <button class="btn btn-danger" style="margin-right: 32px;" onclick="resetScores()">Reset Scores</button>
