--- a/games/classic.html
+++ b/games/classic.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Typical Night at Nathan's</title>
+        <link rel="icon" type="image/png" href="player.png" />
         <meta id="viewport" name="viewport" content ="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <style>
         </style>
