--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>A Typical Night at Nathan's</title>
         
         <script src="assets/cacheJS.js"></script>
+        <link rel="icon" type="image/png" href="games/player.png" />
         <link rel="stylesheet" href="assets/bootstrap.css" />
         <link rel="stylesheet" href="assets/main.css" />
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
@@ -42,6 +43,7 @@
                         <span class="mapGamemode"><strong>Original game code and settings - collection and dodging</strong></span>
                     </div>
                     <div class="thumbnailLabels">
+                        <span class="label label-danger mapLabel">Legacy Version</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
@@ -96,8 +98,8 @@
                         <span class="mapGamemode"><strong>Survive Rebecca while collecting burgers to keep pleasure above 0</strong></span>
                     </div>
                     <div class="thumbnailLabels">
-                        <span class="label label-info mapLabel">New</span>
-                        <span class="label label-warning mapLabel">Featured</span>
+                        <span class="label label-primary mapLabel">New</span>
+                        <span class="label label-info mapLabel">Special Release</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
@@ -110,17 +112,39 @@
         <!-- Blitz -->
         <div class="col-xs-4">
             <div id="gamemode_soon" class="thumbnail thumbnailFloat">
-                <div class="thumbnailImage" style="background-image: url();">
+                <div class="thumbnailImage" style="background-image: url(assets/img/blitz.png);">
                     <div class="thumbnailBanner">
-                        <span class="thumbnailHeader"><strong>Blitz</strong></span><br>
+                        <span class="thumbnailHeader"><strong>Blitz Mode</strong></span><br>
                         <span class="mapGamemode"><strong>Collect as many whips as you can before time runs out</strong></span>
                     </div>
                     <div class="thumbnailLabels">
-                        <span class="label label-info mapLabel">New</span>
+                        <span class="label label-primary mapLabel">New</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
                 <div class="thumbnailAuthors"><small>Best Score: <span id="blitz-best">0</span></small></div>
+                <div style="padding-top:2%;" class="center">
+                    <span><a href="games/blitz.html" target="_blank" class="btn btn-info thumbnailButton" role="button">Play Game</a></span>
+                </div>
+            </div>
+        </div>
+        <!-- Unknown -->
+        <div class="col-xs-4">
+            <div id="gamemode_soon" class="thumbnail thumbnailFloat">
+                <div class="thumbnailImage" style="background-image: url();">
+                    <div class="thumbnailBanner">
+                        <span class="thumbnailHeader"><strong>A <i>Very</i> Special Night Shopping</strong></span><br>
+                        <span class="mapGamemode"><strong>Collect as many Banana and Bunny costumes as you can</strong></span>
+                    </div>
+                    <div class="thumbnailLabels">
+                        <!--<span class="label label-primary mapLabel">New</span>-->
+                        <span class="label label-danger mapLabel">Coming Soon</span>
+                        <span class="label label-info mapLabel">Special Release</span>
+                        <span class="label label-success mapLabel">2-Player Support</span>
+                        <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                    </div>
+                </div>
+                <div class="thumbnailAuthors"><small>Best Score: <span id="unknown-best">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
                     <span class="btn btn-info-disabled thumbnailButton" role="button">Play Game</span>
                 </div>
@@ -147,7 +171,7 @@
                 <div class="label-default label-desc">
                     <img class="saltImage" src="games/salt-grey.png">
                     <span class="infoHeader">Dark Grey Salt</span><br>
-                    <span class="description">Very slow and follows player movement. Only found in Super Insane Mode.</span>
+                    <span class="description">Appears from both the left and right sides. Only found in Blitz Mode.</span>
                 </div>
             </div>
         </div>
@@ -155,6 +179,10 @@
         <div class="col-xs-4">
             <div class="thumbnail thumbnailFloat topMargin black-font">
                 <span class="infoHeader">Recent Changes</span><hr>
+                19-04-16:
+                <ul>
+                    <li>Added <i>Blitz Mode</i></li>
+                </ul>
                 15-04-16:
                 <ul>
                     <li>Added <i>A Very Special Night at Brendon's</i></li>
@@ -167,10 +195,6 @@
                 13-04-16:
                 <ul>
                     <li>Added <i>Deflation Mode</i></li>
-                </ul>
-                12-04-16:
-                <ul>
-                    <li>Added <i>Insane Mode</i></li>
                 </ul>
             </div>
         </div>
