Align text with check box

--- a/games/blitz.html
+++ b/games/blitz.html
@@ -397,7 +397,7 @@
                 </div>
                 <button class="btn btn-success" style="margin-right: 32px;" onclick="reloadPage()">Reload Game</button>
                 <button class="btn btn-danger" style="margin-right: 32px;" onclick="resetScores()">Reset Scores</button>
-                <span style="color: #fff">Show Game Stats</span> <input type="checkbox" id="show-stats" checked="checked" /><br>
+                <span style="color: #fff;vertical-align: 3px;">Show Game Stats</span> <input type="checkbox" id="show-stats" checked="checked" /><br>
             </div>
         </div>
     </body>
