--- a/games/insane.html
+++ b/games/insane.html
@@ -215,7 +215,7 @@
                 if (myGameArea.frameNo == 1 || everyinterval(objRate)) {
                     x = myGameArea.canvas.width;
                     y = myGameArea.canvas.height - 200;
-                    myObstacles.push(new component(saltWidth, saltHight, "salt-red.png", x, Math.floor(Math.random() * 250) + 1, "image"));
+                    myObstacles.push(new component(saltWidth, saltHight, "salts/salt-red.png", x, Math.floor(Math.random() * 250) + 1, "image"));
                 }
                 for (i = 0; i < myObstacles.length; i += 1) {
                     myObstacles[i].x += -objSpeed;
@@ -224,7 +224,7 @@
                 if (myGameArea.frameNo == 1 || everyinterval(collectionRate)) {
                     x = myGameArea.canvas.width;
                     y = myGameArea.canvas.height - 200;
-                    myCollection.push(new component(30, 30, "whip.png", x, Math.floor(Math.random() * 240) + 1, "image"));
+                    myCollection.push(new component(30, 30, "salts/whip.png", x, Math.floor(Math.random() * 240) + 1, "image"));
                 }
                 for (i = 0; i < myCollection.length; i += 1) {
                     myCollection[i].x += -collectionSpeed;
