--- a/index.html
+++ b/index.html
@@ -134,16 +134,16 @@
                 <div class="thumbnailImage" style="background-image: url(assets/img/costume.png);">
                     <div class="thumbnailBanner">
                         <span class="thumbnailHeader"><strong>A <i>Very</i> Special Night Shopping with Tayla</strong></span><br>
-                        <span class="mapGamemode"><strong>Collect as many Banana and Bunny costumes as you can</strong></span>
+                        <span class="mapGamemode"><strong>Spend as much money on costumes as you can</strong></span>
                     </div>
                     <div class="thumbnailLabels">
                         <span class="label label-primary mapLabel">New</span>
                         <span class="label label-info mapLabel">Special Release</span>
-                        <span class="label label-success mapLabel">2-Player Support</span>
+                        <span class="label label-success mapLabel">2-Player Game</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
-                <div class="thumbnailAuthors"><small>P1 Best Score: <span id="costume-best-1">0</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;P2 Best Score: <span id="costume-best-2">0</span></small></div>
+                <div class="thumbnailAuthors"><small>Greatest Spendings (p1, p2): <span id="costume-best-1">0</span>&nbsp;&nbsp;|&nbsp;&nbsp;<span id="costume-best-2">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
                     <span><a href="games/costume.html" target="_blank" class="btn btn-info thumbnailButton" role="button">Play Game</a></span>
                 </div>
@@ -178,6 +178,11 @@
         <div class="col-xs-4">
             <div class="thumbnail thumbnailFloat topMargin black-font">
                 <span class="infoHeader">Recent Changes</span><hr>
+                20-04-16:
+                <ul>
+                    <li>Fix best scores not correctly updating on Blitz</li>
+                    <li>General improvements to all gamemodes</li>
+                </ul>
                 19-04-16:
                 <ul>
                     <li>Added <i>A Very Special Night Shopping with Tayla</i></li>
@@ -186,11 +191,6 @@
                 15-04-16:
                 <ul>
                     <li>Added <i>A Very Special Night at Brendon's</i></li>
-                </ul>
-                14-04-16:
-                <ul>
-                    <li>Remove size changes in blue salt</li>
-                    <li>Reduce collection score penalty for salt spawn rate</li>
                 </ul>
             </div>
         </div>
