--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
         <link rel="icon" type="image/png" href="games/player.png" />
         <link rel="stylesheet" href="assets/bootstrap.css" />
         <link rel="stylesheet" href="assets/main.css" />
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
     </head>
     <body onload="setupScores()">
         <div class="container-non-responsive">
         <div class="center">
-            <span class="strikeThru">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class="strikeThru">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <span class="header">A Typical Night at Nathan's: The Game</span>
-            <span class="strikeThru">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class="strikeThru">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </div>
         <h3>&nbsp;&nbsp;&nbsp;Gamemode Selection and Information</h3>
         <!-- Original -->
@@ -196,7 +196,7 @@
         <!-- Recent Changes -->
         <div class="col-xs-4">
             <div class="thumbnail thumbnailFloat topMargin black-font">
-                <span class="infoHeader">Recent Changes</span><hr>
+                <span class="infoHeader">Recent Changes</span><br>
                 22-04-16:
                 <ul>
                     <li>Added <i>The Binding of Nathan</i></li>
