--- a/games/binding.html
+++ b/games/binding.html
@@ -8,7 +8,7 @@
         <script src="../assets/cacheJS.js"></script>
         <link rel="stylesheet" href="../assets/main.css">
         <link rel="stylesheet" href="../assets/bootstrap.css">
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
         <style>
             canvas {
                 border: 2px solid #222222;
