--- a/games/brendon.html
+++ b/games/brendon.html
@@ -8,7 +8,7 @@
         <script src="../assets/cacheJS.js"></script>
         <link rel="stylesheet" href="../assets/main.css">
         <link rel="stylesheet" href="../assets/bootstrap.css">
-        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
     </head>
     <body class="mainElement" onload="startGame()">
         <script>
