--- a/v2/index.html
+++ b/v2/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="bar bar-nav">
             <a class="icon icon-gear pull-right" href="#settingsModal"></a>
-            <h1 class="title">A Typical Night At Nathan's <small>(version 2.0.0)</small></h1>
+            <h1 class="title">A Typical Night At Nathan's</h1>
         </header>
         <div class="content">
             <ul class="table-view">
@@ -94,28 +94,13 @@
             </ul>
         </div>
         <!-- /.content -->
-        <!-- Settings modal --><div id="myModalexample" class="modal">
-  <header class="bar bar-nav">
-    <a class="icon icon-close pull-right" href="#myModalexample"></a>
-    <h1 class="title">Modal</h1>
-  </header>
-
-  <div class="content">
-    <p class="content-padded">The contents of my modal go here. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
-  </div>
-</div>
+        <!-- Settings modal -->
         <div id="settingsModal" class="modal">
             <header class="bar bar-nav">
                 <a class="icon icon-close pull-right" href="#settingsModal"></a>
                 <h1 class="title">Settings</h1>
             </header>
             <div class="content">
-                <form class="input-group">
-                    <input type="text" placeholder="Full name">
-                    <input type="email" placeholder="Email">
-                    <input type="text" placeholder="Username">
-                </form>
-                <h5 class="content-padded">App settings</h5>
                 <ul class="table-view">
                     <li class="table-view-cell media">
                         <span class="media-object pull-left icon icon-sound"></span>
