--- a/v2/index.html
+++ b/v2/index.html
@@ -20,7 +20,7 @@
             <ul class="table-view">
                 <li class="table-view-cell table-view-divider">Gamemode Selection</li>
                 <li class="table-view-cell media">
-                    <a class="navigate-right" href="choose-theater.html" data-transition="slide-in">
+                    <a href="#settingsModal" class="navigate-right" href="choose-theater.html" data-transition="slide-in">
                         <img class="media-object pull-left gamemode-icon" src="assets/img/original.png">
                         <div class="media-body">
                             Classic
